Uploaded image for project: 'Apache HAWQ'
  1. Apache HAWQ
  2. HAWQ-631

Wrongly report error message when QD fails to connect to resource manager

    XMLWordPrintableJSON

Details

    Description

      postgres=# SELECT * FROM a;
      WARNING: failed to connect to remote socket server test1:5437
      ERROR: must be superuser to create resource queues

      (gdb) b connectToServerRemote
      Breakpoint 1 at 0x8ce640: file network_utils.c, line 351.
      (gdb) c
      Continuing.
      [New Thread 0x7f98e70a3700 (LWP 60779)]

      Breakpoint 1, connectToServerRemote (address=0x28128c0 "test1", port=5437, clientfd=0x7fff63f4addc) at network_utils.c:351
      351 network_utils.c: No such file or directory.
      in network_utils.c

      Attachments

        Activity

          People

            yjin Yi Jin
            yjin Yi Jin
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved: