HAWQ-631. Wrongly report error message when QD fails to connect to resource manager